@@ -1,8 +1,0 @@
-<?xml version="1.0"?>
-<?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
-
-<!-- Put mapred-specific property overrides in this file. -->
-
-<configuration>
-
-</configuration>
