@@ -198,7 +198,7 @@ MapReduce data is written.  It also may be a list of directories.</li>
 href="../hadoop-default.html#mapred.map.tasks">mapred.map.tasks</a></tt>
 and <tt><a
 href="../hadoop-default.html#mapred.reduce.tasks">mapred.reduce.tasks</a></tt>
-in <tt>conf/mapred-default.xml</tt>.  As a rule of thumb, use 10x the
+in <tt>conf/hadoop-site.xml</tt>.  As a rule of thumb, use 10x the
 number of slave processors for <tt>mapred.map.tasks</tt>, and 2x the
 number of slave processors for <tt>mapred.reduce.tasks</tt>.</li>
 
