@@ -22,6 +22,13 @@ Trunk (unreleased changes)
     HADOOP-1838.  The blocksize of files created with an earlier release is
     set to the default block size.  (Dhruba Borthakur via dhruba)
 
+    HADOOP-785.  Add support for 'final' Configuration parameters,
+    removing support for 'mapred-default.xml', and changing
+    'hadoop-site.xml' to not override other files.  Now folks should
+    generally use 'hadoop-site.xml' for all configurations.  Values
+    with a 'final' tag may not be overridden by subsequently loaded
+    configuration files, e.g., by jobs.  (Arun C. Murthy via cutting)
+
   NEW FEATURES
 
     HADOOP-1636.  Allow configuration of the number of jobs kept in
